--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .inicio{
     --opacidad-negro: 0.5;
-    background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url("/img/13.webp");
+    background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url("../img/Imagen.webp");
     background-position: center;
     background-size: cover;
     height:30rem;  
