--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,23 @@
 .gorras1{
     .card{
         width: 18rem;
-        background-color: blue;
+        background-color: grey;
+        .card-title{
+         font-size: 1.5rem;
+         color: white;
+        }
+         
+     }
+     .card-text{
+         font-size: 0.9rem;
+         color: white;
+     }
+
+}
+.gorras2{
+    .card{
+        width: 18rem;
+        background-color: grey;
         .card-title{
          font-size: 1.5rem;
          color: cadetblue;
@@ -43,7 +59,6 @@
      }
 
 }
-
 .cards{
 background-color: gray;
 width: 20rem;
@@ -78,7 +93,7 @@ width: 20rem;
         background-color: gray;
         .card-title{
          font-size: 1.5rem;
-         color: cadetblue;
+         color: white;
         }
          
      }
@@ -86,4 +101,14 @@ width: 20rem;
          font-size: 0.9rem;
          color: black;
      }
+}
+.footer{
+    background-color: gray;
+}
+.navbar-expand-lg{
+    background-color: gray;
+}
+
+.producto{
+    margin: 2px;
 }
